test/redefineBeforeLoop.slq
def foo(){
	x:=1;
	x:=0; /// error
	for i in 0..10{ }
}
